2009-06-08  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	(diff91_cvs: resembling diff3, diff27, diff33, diff45, diff47, diff49,
	diff60, diff67, diff68 partly)
	* alloc.c (GC_FULL_FREQ, GC_DONT_EXPAND, GC_FREE_SPACE_DIVISOR,
        GC_TIME_LIMIT): New macros (used to control the default initial
        values of GC_full_freq variable, GC_dont_expand,
        GC_free_space_divisor, GC_time_limit respectively).
        * include/private/gc_priv.h (TIME_LIMIT): Remove macro (replaced
        with GC_TIME_LIMIT in alloc.c).
        * alloc.c (GC_need_full_gc, GC_stopped_mark, GC_finish_collection):
        Define as STATIC.
        * mark_rts.c (GC_push_current_stack, GC_push_gc_structures): Ditto.
        * include/private/gc_priv.h (GC_stopped_mark, GC_finish_collection):
        Move the prototypes to alloc.c, make STATIC.
        * include/private/gc_priv.h (GC_push_current_stack,
        GC_push_gc_structures, GC_push_regs_and_stack): Remove prototypes
        (move the comments to the places where these functions are defined).
        * mach_dep.c (GC_push_regs_and_stack): Move to mark_rts.c and define
        as STATIC.
        * alloc.c (GC_timeout_stop_func, GC_stopped_mark,
        GC_print_heap_sects): Convert a group of printf() calls into
        a single one (for output atomicity).
        * mark_rts.c (GC_print_static_roots): Ditto.
        * alloc.c (GC_stopped_mark): Output blank line (when logging) for
        convenience to delimit collections.
        * alloc.c (GC_clear_a_few_frames): Rename NWORDS to CLEAR_NWORDS;
        make "frames" local variable volatile (to prevent optimization).
        * alloc.c (GC_try_to_collect_inner, GC_stopped_mark,
        GC_finish_collection, GC_allocobj): Remove outdated comments about
        disabling signals.
        * include/private/gc_priv.h (GC_register_displacement_inner,
        GC_gcollect_inner): Ditto.
        * alloc.c (GC_try_to_collect_inner, GC_stopped_mark,